Tweak some tests